Add mock client

--- a/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
+++ b/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
@@ -7,6 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CalendarRawContent.txt" />
+    <None Remove="ClassroomsRawContent.txt" />
+    <None Remove="GroupsRawContent.txt" />
+    <None Remove="LecturesRawContent.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="CalendarRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ClassroomsRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GroupsRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="LecturesRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
