--- a/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
+++ b/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
@@ -11,6 +11,7 @@
     <None Remove="ClassroomsRawContent.txt" />
     <None Remove="GroupsRawContent.txt" />
     <None Remove="LecturesRawContent.txt" />
+    <None Remove="testcalendar.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="LecturesRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="testcalendar.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
