--- a/NpuTimetableParser/NpuTimetableParser.csproj
+++ b/NpuTimetableParser/NpuTimetableParser.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="RestSharp" Version="106.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Windows.Forms.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
