--- a/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
+++ b/NpuTimeTableParserTest/NpuTimeTableParserTest.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="CalendarRawContent.txt" />
     <None Remove="ClassroomsRawContent.txt" />
+    <None Remove="FacultiesRawContent.txt" />
     <None Remove="GroupsRawContent.txt" />
     <None Remove="LecturesRawContent.txt" />
     <None Remove="testcalendar.txt" />
@@ -19,6 +20,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="ClassroomsRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FacultiesRawContent.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="GroupsRawContent.txt">
