--- a/RozkladNpuBot/RozkladNpuBot.csproj
+++ b/RozkladNpuBot/RozkladNpuBot.csproj
@@ -5,4 +5,19 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.3.1" />
+    <PackageReference Include="Telegram.Bot" Version="14.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="NpuTimetableParser">
+      <HintPath>..\..\NpuTimetableParser\NpuTimetableParser\bin\Debug\netcoreapp2.1\NpuTimetableParser.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
