Move to asp net core app (aslo fucked up with git)
Expose bot api. Fuck me

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,33 @@
-*.swp
-*.*~
-project.lock.json
-.DS_Store
-*.pyc
 
-# Visual Studio Code
-.vscode
-
-# User-specific files
-*.suo
+#Ignore thumbnails created by Windows
+Thumbs.db
+#Ignore files built by Visual Studio
+*.obj
+*.exe
+*.pdb
 *.user
-*.userosscache
-*.sln.docstates
-
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-build/
-bld/
-[Bb]in/
-[Oo]bj/
-msbuild.log
-msbuild.err
-msbuild.wrn
-
-# Visual Studio 2015
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
 .vs/
+#Nuget packages folder
+packages/
+secret.json
