Add message text formating

--- a/RozkladNpuAspNetCore/appsettings.json
+++ b/RozkladNpuAspNetCore/appsettings.json
@@ -9,7 +9,7 @@
     "BotApi" : ""
   },
   "DbConfiguration": {
-  	"ConnectionString" : "",
+  	"ConnectionString" : ""
   },
   "Stickers" : {
     "IdkStickersValues" : [
