--- a/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
+++ b/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
@@ -5,13 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\**" />
-    <Content Remove="wwwroot\**" />
-    <EmbeddedResource Remove="wwwroot\**" />
-    <None Remove="wwwroot\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
@@ -27,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="lib\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
