--- a/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
+++ b/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GCop.All.Common" Version="2.4.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
