--- a/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
+++ b/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="GCop.All.Common" Version="2.4.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
     <PackageReference Include="RestSharp" Version="106.3.1" />
     <PackageReference Include="Telegram.Bot" Version="14.10.0" />
   </ItemGroup>
