Update project info

--- a/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
+++ b/RozkladNpuAspNetCore/RozkladNpuAspNetCore.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>1.0.2</Version>
+    <Authors>matryoshka</Authors>
+    <Product>Npu Telegram Schedule Bot</Product>
   </PropertyGroup>
 
   <ItemGroup>
