--- a/RozkladSubscribeModule/RozkladSubscribeModule.csproj
+++ b/RozkladSubscribeModule/RozkladSubscribeModule.csproj
@@ -8,15 +8,12 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\RozkladNpuAspNetCore\RozkladNpuAspNetCore\RozkladNpuAspNetCore.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Persistence\" />
   </ItemGroup>
 
   <ItemGroup>
