--- a/RozkladSubscribeModule.Tests/RozkladSubscribeModule.Tests.csproj
+++ b/RozkladSubscribeModule.Tests/RozkladSubscribeModule.Tests.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -20,6 +23,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.Extensions.Logging.Abstractions">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.logging.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="NpuTimetableParser">
+      <HintPath>..\..\RozkladNpuAspNetCore\RozkladNpuAspNetCore\lib\NpuTimetableParser.dll</HintPath>
     </Reference>
   </ItemGroup>
 
