--- a/NpuTimetableParser/NpuTimetableParser.csproj
+++ b/NpuTimetableParser/NpuTimetableParser.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>1.1.1</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.2.0</Version>
     <Authors>matryoshka</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
