--- a/RozkladNpuBot.Common/RozkladNpuBot.Common.csproj
+++ b/RozkladNpuBot.Common/RozkladNpuBot.Common.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Telegram.Bot" Version="14.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NpuTimetableParser\NpuTimetableParser.csproj" />
+  </ItemGroup>
+
 </Project>
