--- a/RozkladSubscribeModule/RozkladSubscribeModule.csproj
+++ b/RozkladSubscribeModule/RozkladSubscribeModule.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
@@ -15,9 +16,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.hosting.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
-    </Reference>
-    <Reference Include="NpuTimetableParser">
-      <HintPath>..\..\NpuTimetableParser\NpuTimetableParser\bin\Debug\netcoreapp2.1\NpuTimetableParser.dll</HintPath>
     </Reference>
   </ItemGroup>
 
@@ -32,5 +30,11 @@
       <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RozkladNpuBot.Application\RozkladNpuBot.Application.csproj" />
+      <ProjectReference Include="..\RozkladNpuBot.Common\RozkladNpuBot.Common.csproj" />
+      <ProjectReference Include="..\RozkladNpuBot.Domain\RozkladNpuBot.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
