Move LocalDateTime to persistence

--- a/RozkladNpuBot.Application/RozkladNpuBot.Application.csproj
+++ b/RozkladNpuBot.Application/RozkladNpuBot.Application.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RozkladNpuBot.Common\RozkladNpuBot.Common.csproj" />
     <ProjectReference Include="..\RozkladNpuBot.Domain\RozkladNpuBot.Domain.csproj" />
+    <ProjectReference Include="..\RozkladNpuBot.Infrastructure\RozkladNpuBot.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
