--- a/RozkladNpuBot.Application/RozkladNpuBot.Application.csproj
+++ b/RozkladNpuBot.Application/RozkladNpuBot.Application.csproj
@@ -5,14 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\RozkladNpuBot.Common\RozkladNpuBot.Common.csproj" />
     <ProjectReference Include="..\RozkladNpuBot.Domain\RozkladNpuBot.Domain.csproj" />
     <ProjectReference Include="..\RozkladNpuBot.Infrastructure\RozkladNpuBot.Infrastructure.csproj" />
+    <ProjectReference Include="..\RozkladSubscribeModule\RozkladSubscribeModule.csproj" />
   </ItemGroup>
 
 </Project>
