Fix localization dir preserve

--- a/RozkladNpuBot.WebApi/RozkladNpuBot.WebApi.csproj
+++ b/RozkladNpuBot.WebApi/RozkladNpuBot.WebApi.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Properties\localizations\ua.json">
+    <Content Update="Properties\localizations\*">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
