--- a/RozkladNpuBot.WebApi/dockerfile
+++ b/RozkladNpuBot.WebApi/dockerfile
@@ -5,4 +5,4 @@ ENV ASPNETCORE_URLS=http://*:1617
 COPY ./release /app
 WORKDIR /app
 
-ENTRYPOINT ["dotnet", "RozkladNpuBot.WebApi.dll"]
+ENTRYPOINT ["docker-entry-point.sh"]
