Add always restarting to docker-compose

--- a/docker-build/docker-compose.yml
+++ b/docker-build/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   rozklad-app:
     image: matryoshka/rozklad-app
+    restart: always
     depends_on:
       - mysql_db
       - mongo
