--- a/docker-build/docker-compose.yml
+++ b/docker-build/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - "443:443"
     networks:
       - rozklad-network
+    depends_on: 
+      - rozklad-app
 networks:
   rozklad-network:
     attachable: true
