--- a/RozkladNpuBot.WebApi/RozkladNpuBot.WebApi.csproj
+++ b/RozkladNpuBot.WebApi/RozkladNpuBot.WebApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>2.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
