--- a/RozkladNpuBot.Domain/RozkladNpuBot.Domain.csproj
+++ b/RozkladNpuBot.Domain/RozkladNpuBot.Domain.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NpuTimetableParser\NpuTimetableParser.csproj" />
     <ProjectReference Include="..\RozkladNpuBot.Common\RozkladNpuBot.Common.csproj" />
   </ItemGroup>
 
