--- a/NpuTimetableParser/NpuTimetableParser.csproj
+++ b/NpuTimetableParser/NpuTimetableParser.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="RestSharp" Version="106.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RozkladNpuBot.Common\RozkladNpuBot.Common.csproj" />
+  </ItemGroup>
+
 </Project>
