Update mock content for parser

--- a/NpuTimetableParser.Tests/NpuTimetableParser.Tests.csproj
+++ b/NpuTimetableParser.Tests/NpuTimetableParser.Tests.csproj
@@ -31,6 +31,9 @@
     <Content Include="Infrastructure\MockServerContent\LecturesRawContent.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Infrastructure\MockServerContent\SettingsRawContent.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Infrastructure\MockServerContent\testcalendar.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
