--- a/Src/Core/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
+++ b/Src/Core/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
@@ -2,12 +2,17 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <RootNamespace>NpuRozklad.Telegram.Abstractions</RootNamespace>
+        <RootNamespace>NpuRozklad.Telegram</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\NpuRozklad.Core\NpuRozklad.Core.csproj" />
       <ProjectReference Include="..\NpuRozklad.Subscribtion.Core\NpuRozklad.Subscribtion.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+      <PackageReference Include="Telegram.Bot" Version="15.5.1" />
     </ItemGroup>
 
 </Project>
