--- a/Src/NpuRozklad/NpuRozklad.csproj
+++ b/Src/NpuRozklad/NpuRozklad.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\NpuRozklad.Core\NpuRozklad.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
 </Project>
