--- a/Src/NpuRozklad.LessonsProvider/NpuRozklad.LessonsProvider.csproj
+++ b/Src/NpuRozklad.LessonsProvider/NpuRozklad.LessonsProvider.csproj
@@ -13,4 +13,10 @@
       <ProjectReference Include="..\NpuRozklad.Core\NpuRozklad.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>NpuRozklad.LessonsProvider.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
