--- a/Src/NpuRozklad.LessonsProvider/NpuRozklad.LessonsProvider.csproj
+++ b/Src/NpuRozklad.LessonsProvider/NpuRozklad.LessonsProvider.csproj
@@ -18,6 +18,9 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>NpuRozklad.LessonsProvider.Tests</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
 </Project>
