--- a/Src/NpuRozklad.Persistence/NpuRozklad.Persistence.csproj
+++ b/Src/NpuRozklad.Persistence/NpuRozklad.Persistence.csproj
@@ -11,7 +11,10 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1"/>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     </ItemGroup>
 
 </Project>
