--- a/Src/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
+++ b/Src/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
@@ -12,6 +12,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
       <PackageReference Include="Telegram.Bot" Version="15.5.1" />
     </ItemGroup>
 
