--- a/Src/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
+++ b/Src/NpuRozklad.Telegram/NpuRozklad.Telegram.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
       <PackageReference Include="Telegram.Bot" Version="15.5.1" />
