--- a/Src/NpuRozklad.Web/appsettings.Development.json
+++ b/Src/NpuRozklad.Web/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "System": "Information"
     }
-  }
+  },
+  "MySqlConnectionString":"Server=localhost;Database=npu-rozklad;User=root;Password=pass;"
 }
