--- a/Src/NpuRozklad.Web/appsettings.json
+++ b/Src/NpuRozklad.Web/appsettings.json
@@ -2,9 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Information",
+      "System": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppVersion" : "3.0.0-alpha.1",
+  "LessonsProvider": {
+    "BaseAddress" : "https://ei.npu.edu.ua/",
+    "CallEndPoint": "Server.php"
+  }
 }
