Add lock file for web project

--- a/Src/NpuRozklad.Web/NpuRozklad.Web.csproj
+++ b/Src/NpuRozklad.Web/NpuRozklad.Web.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PublishSingleFile>true</PublishSingleFile>
         <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
