--- a/Src/NpuRozklad.Web/appsettings.json
+++ b/Src/NpuRozklad.Web/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AppVersion" : "3.0.0-alpha.1",
+  "AppVersion" : "3.0.0",
   "LessonsProvider": {
     "BaseAddress" : "https://ei.npu.edu.ua/",
     "CallEndPoint": "Server.php"
